kubernetes/apps/immich/ml/service-unraid.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-ml-unraid
  namespace: immich
spec:
  ports:
    - port: 3003
      targetPort: 3003
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: immich-ml-unraid
  namespace: immich
  labels:
    kubernetes.io/service-name: immich-ml-unraid
addressType: IPv4
ports:
  - port: 3003
    protocol: TCP
endpoints:
  - addresses:
      - 192.168.1.100
