kubernetes/apps/immich/ml/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-ml
  namespace: immich
spec:
  selector:
    app: immich-ml
  ports:
    - port: 3003
      targetPort: 3003
