kubernetes/apps/immich/ml/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: immich-ml
  namespace: immich
spec:
  podSelector:
    matchLabels:
      app: immich-ml
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: immich
      ports:
        - port: 3003
